{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 31,
  "lineage": "5dfbafc8-dc8c-d209-4e35-5c05dfa68707",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066ef2330fc6efb9c",
            "association_id": "eipassoc-048501e4601a0d069",
            "domain": "vpc",
            "id": "eipalloc-066ef2330fc6efb9c",
            "network_border_group": "us-east-2",
            "network_interface": "eni-06320ec0a33185f86",
            "private_dns": "ip-192-168-1-186.us-east-2.compute.internal",
            "private_ip": "192.168.1.186",
            "public_dns": "ec2-3-13-178-211.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.178.211",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw_terraform",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:613036180535:internet-gateway/igw-0258ab29a4c4fbd0b",
            "id": "igw-0258ab29a4c4fbd0b",
            "owner_id": "613036180535",
            "tags": {
              "Department": "Academy",
              "Name": "igw-terraform",
              "Owner": "ian.soares"
            },
            "tags_all": {
              "Department": "Academy",
              "Name": "igw-terraform",
              "Owner": "ian.soares"
            },
            "vpc_id": "vpc-0ae4129b033f69b39"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066ef2330fc6efb9c",
            "connectivity_type": "public",
            "id": "nat-0d2210aeb9c76952d",
            "network_interface_id": "eni-06320ec0a33185f86",
            "private_ip": "192.168.1.186",
            "public_ip": "3.13.178.211",
            "subnet_id": "subnet-0cda5ee895a53b206",
            "tags": {
              "Name": "nat_gw_terraform"
            },
            "tags_all": {
              "Name": "nat_gw_terraform"
            }
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_internet_gateway.igw_terraform",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:613036180535:route-table/rtb-0c695321cc8512592",
            "id": "rtb-0c695321cc8512592",
            "owner_id": "613036180535",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d2210aeb9c76952d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "Academy",
              "Name": "private_rt_table",
              "Owner": "ian.soares"
            },
            "tags_all": {
              "Department": "Academy",
              "Name": "private_rt_table",
              "Owner": "ian.soares"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae4129b033f69b39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:613036180535:route-table/rtb-07cf403fd1d6e45e5",
            "id": "rtb-07cf403fd1d6e45e5",
            "owner_id": "613036180535",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0258ab29a4c4fbd0b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "Academy",
              "Name": "public_rt_table",
              "Owner": "ian.soares"
            },
            "tags_all": {
              "Department": "Academy",
              "Name": "public_rt_table",
              "Owner": "ian.soares"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae4129b033f69b39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_terraform",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb87a525ed9add81",
            "route_table_id": "rtb-0c695321cc8512592",
            "subnet_id": "subnet-0392c21fd53e00618"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt_table",
            "aws_subnet.private_subnet_a",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc9a3e2b0eb3a0eb",
            "route_table_id": "rtb-0c695321cc8512592",
            "subnet_id": "subnet-0a9730f10ec0c3bda"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt_table",
            "aws_subnet.private_subnet_b",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b01cfc304bdbd497",
            "route_table_id": "rtb-07cf403fd1d6e45e5",
            "subnet_id": "subnet-0cda5ee895a53b206"
          },
          "dependencies": [
            "aws_internet_gateway.igw_terraform",
            "aws_route_table.public_rt_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f1e05c683006eaa",
            "route_table_id": "rtb-07cf403fd1d6e45e5",
            "subnet_id": "subnet-08c9b5826ee2a0d6e"
          },
          "dependencies": [
            "aws_internet_gateway.igw_terraform",
            "aws_route_table.public_rt_table",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:613036180535:subnet/subnet-0392c21fd53e00618",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0392c21fd53e00618",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613036180535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privateSubnetA"
            },
            "tags_all": {
              "Name": "privateSubnetA"
            },
            "vpc_id": "vpc-0ae4129b033f69b39"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:613036180535:subnet/subnet-0a9730f10ec0c3bda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9730f10ec0c3bda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613036180535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privateSubnetB"
            },
            "tags_all": {
              "Name": "privateSubnetB"
            },
            "vpc_id": "vpc-0ae4129b033f69b39"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:613036180535:subnet/subnet-0cda5ee895a53b206",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cda5ee895a53b206",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613036180535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicSubnetA"
            },
            "tags_all": {
              "Name": "publicSubnetA"
            },
            "vpc_id": "vpc-0ae4129b033f69b39"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:613036180535:subnet/subnet-08c9b5826ee2a0d6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c9b5826ee2a0d6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613036180535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicSubnetB"
            },
            "tags_all": {
              "Name": "publicSubnetB"
            },
            "vpc_id": "vpc-0ae4129b033f69b39"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:613036180535:vpc/vpc-0ae4129b033f69b39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-057f09ebca3517e70",
            "default_route_table_id": "rtb-04a3dc14adc36e8fb",
            "default_security_group_id": "sg-065df5ef43e5cbd79",
            "dhcp_options_id": "dopt-0f4c12807073a5ef7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ae4129b033f69b39",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a3dc14adc36e8fb",
            "owner_id": "613036180535",
            "tags": {
              "Department": "Academy",
              "Name": "vpc_terraform",
              "Owner": "ian.soares"
            },
            "tags_all": {
              "Department": "Academy",
              "Name": "vpc_terraform",
              "Owner": "ian.soares"
            }
          }
        }
      ]
    }
  ]
}